fixed the alignment of sidebar

--- a/src/Style/homepage.css
+++ b/src/Style/homepage.css
@@ -5,8 +5,7 @@
 }
 
 .mainhome {
-  margin-left: 17.7rem;
-  width: 85%;
+  margin-left: 20.8rem;
 }
 
 .header {
